Fix wrapping

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -50,6 +50,7 @@
 .card .tech-stack {
   display: flex;
   gap: 0.5rem;
+  flex-wrap: wrap;
 }
 .card .tech-stack .tech {
   padding: 2px 10px;
@@ -82,5 +83,11 @@
   }
   .card h4 {
     color: var(--accent);
+  }
+}
+
+@media screen and (max-width: 340px) {
+  .card {
+    width: 250px;
   }
 }
